--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,4 +15,24 @@
    "files.autoSave": "off",
    "workbench.colorTheme": "Visual Studio Dark",
    "terminal.integrated.gpuAcceleration": "canvas",
+   "workbench.colorCustomizations": {
+      "activityBar.activeBackground": "#65e680",
+      "activityBar.background": "#65e680",
+      "activityBar.foreground": "#15202b",
+      "activityBar.inactiveForeground": "#15202b99",
+      "activityBarBadge.background": "#8e76e9",
+      "activityBarBadge.foreground": "#15202b",
+      "commandCenter.border": "#15202b99",
+      "sash.hoverBorder": "#65e680",
+      "statusBar.background": "#39df5c",
+      "statusBar.foreground": "#15202b",
+      "statusBarItem.hoverBackground": "#20c543",
+      "statusBarItem.remoteBackground": "#39df5c",
+      "statusBarItem.remoteForeground": "#15202b",
+      "titleBar.activeBackground": "#39df5c",
+      "titleBar.activeForeground": "#15202b",
+      "titleBar.inactiveBackground": "#39df5c99",
+      "titleBar.inactiveForeground": "#15202b99"
+   },
+   "peacock.color": "#39df5c",
 }
